--- a/Manga.css
+++ b/Manga.css
@@ -17,13 +17,13 @@ Manga Tumbnail
 #more908 {background-image: url(http://cdn.myanimelist.net/images/manga/3/45583.jpg);}
 #more583 {background-image: url(http://cdn.myanimelist.net/images/manga/5/25982.jpg);}
 #more3866 {background-image: url(http://cdn.myanimelist.net/images/manga/2/4387.jpg);}
-#more564 {background-image: url(http://cdn.myanimelist.net/images/manga/1/27979.jpg);}
-#more5255 {background-image: url(http://cdn.myanimelist.net/images/manga/2/33673.jpg);}
+#more564 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/4/157936.jpg);}
+#more5255 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/152369.jpg);}
 #more2921 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6309.jpg);}
 #more584 {background-image: url(http://cdn.myanimelist.net/images/manga/5/16174.jpg);}
 #more3986 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/186275.jpg);}
 #more9 {background-image: url(http://cdn.myanimelist.net/images/manga/5/973.jpg);}
-#more3031 {background-image: url(http://cdn.myanimelist.net/images/manga/2/80893.jpg);}
+#more3031 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/80893.jpg);}
 #more13492 {background-image: url(http://cdn.myanimelist.net/images/manga/3/39738.jpg);}
 #more23390 {background-image: url(http://cdn.myanimelist.net/images/manga/1/95517.jpg);}
 #more10010 {background-image: url(http://cdn.myanimelist.net/images/manga/1/55927.jpg);}
@@ -45,10 +45,10 @@ Manga Tumbnail
 #more3633 {background-image: url(http://cdn.myanimelist.net/images/manga/3/29745.jpg);}
 #more8586 {background-image: url(http://cdn.myanimelist.net/images/manga/2/55867.jpg);}
 #more591 {background-image: url(http://cdn.myanimelist.net/images/manga/2/13176.jpg);}
-#more8967 {background-image: url(http://cdn.myanimelist.net/images/manga/4/12370.jpg);}
+#more8967 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/4/171353.jpg);}
 #more336 {background-image: url(http://cdn.myanimelist.net/images/manga/3/55823.jpg);}
 #more3438 {background-image: url(http://cdn.myanimelist.net/images/manga/3/31524.jpg);}
-#more5293 {background-image: url(http://cdn.myanimelist.net/images/manga/1/50453.jpg);}
+#more5293 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/196163.jpg);}
 #more26 {background-image: url(http://cdn.myanimelist.net/images/manga/2/27515.jpg);}
 #more71 {background-image: url(http://cdn.myanimelist.net/images/manga/1/30554.jpg);}
 #more676 {background-image: url(http://cdn.myanimelist.net/images/manga/1/32468.jpg);}
@@ -56,7 +56,7 @@ Manga Tumbnail
 #more3 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/185858.jpg);}
 #more1162 {background-image: url(http://cdn.myanimelist.net/images/manga/2/55379.jpg);}
 #more1649 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/149018.jpg);}
-#more11734 {background-image: url(http://cdn.myanimelist.net/images/manga/3/66993.jpg);}
+#more11734 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/66993.jpg);}
 #more988 {background-image: url(http://cdn.myanimelist.net/images/manga/3/25585.jpg);}
 #more50 {background-image: url(http://cdn.myanimelist.net/images/manga/1/57607.jpg);}
 #more13463 {background-image: url(http://cdn.myanimelist.net/images/manga/1/26788.jpg);}
@@ -73,7 +73,7 @@ Manga Tumbnail
 #more31 {background-image: url(http://cdn.myanimelist.net/images/manga/4/11612.jpg);}
 #more12586 {background-image: url(http://cdn.myanimelist.net/images/manga/3/56963.jpg);}
 #more8341 {background-image: url(http://cdn.myanimelist.net/images/manga/1/15122.jpg);}
-#more142 {background-image: url(http://cdn.myanimelist.net/images/manga/1/53387.jpg);}
+#more142 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/53387.jpg);}
 #more101 {background-image: url(http://cdn.myanimelist.net/images/manga/1/29292.jpg);}
 #more1271 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6702.jpg);}
 #more436 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/4/38133.jpg);}
@@ -140,7 +140,7 @@ Manga Tumbnail
 #more338 {background-image: url(http://cdn.myanimelist.net/images/manga/4/505.jpg);}
 #more15578 {background-image: url(http://cdn.myanimelist.net/images/manga/1/51389.jpg);}
 #more51 {background-image: url(http://cdn.myanimelist.net/images/manga/2/54937.jpg);}
-#more149 {background-image: url(http://cdn.myanimelist.net/images/manga/1/57043.jpg);}
+#more149 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/57043.jpg);}
 #more348 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/161681.jpg);}
 #more1412 {background-image: url(http://cdn.myanimelist.net/images/manga/2/11112.jpg);}
 #more3468 {background-image: url(http://cdn.myanimelist.net/images/manga/3/53493.jpg);}
@@ -165,7 +165,7 @@ Manga Tumbnail
 #more73 {background-image: url(http://cdn.myanimelist.net/images/manga/3/57219.jpg);}
 #more7458 {background-image: url(http://cdn.myanimelist.net/images/manga/5/34287.jpg);}
 #more658 {background-image: url(http://cdn.myanimelist.net/images/manga/2/56791.jpg);}
-#more1101 {background-image: url(http://cdn.myanimelist.net/images/manga/1/56671.jpg);}
+#more1101 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/56671.jpg);}
 #more145 {background-image: url(http://cdn.myanimelist.net/images/manga/1/51711.jpg);}
 #more735 {background-image: url(http://cdn.myanimelist.net/images/manga/2/94599.jpg);}
 #more4571 {background-image: url(http://cdn.myanimelist.net/images/manga/3/19761.jpg);}
@@ -185,7 +185,7 @@ Manga Tumbnail
 #more736 {background-image: url(http://cdn.myanimelist.net/images/manga/3/29830.jpg);}
 #more1376 {background-image: url(http://cdn.myanimelist.net/images/manga/1/57015.jpg);}
 #more55 {background-image: url(http://cdn.myanimelist.net/images/manga/3/4971.jpg);}
-#more7627 {background-image: url(http://cdn.myanimelist.net/images/manga/5/25944.jpg);}
+#more7627 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/5/25944.jpg);}
 #more48 {background-image: url(http://cdn.myanimelist.net/images/manga/2/55441.jpg);}
 #more21419 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/178011.webp);}
 #more14236 {background-image: url(http://cdn.myanimelist.net/images/manga/1/40027.jpg);}
@@ -234,7 +234,7 @@ Manga Tumbnail
 #more3493 {background-image: url(http://cdn.myanimelist.net/images/manga/1/9817.jpg);}
 #more3194 {background-image: url(http://cdn.myanimelist.net/images/manga/3/15382.jpg);}
 #more15805 {background-image: url(http://cdn.myanimelist.net/images/manga/2/23034.jpg);}
-#more705 {background-image: url(http://cdn.myanimelist.net/images/manga/5/59265.jpg);}
+#more705 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/147479.jpg);}
 #more5113 {background-image: url(http://cdn.myanimelist.net/images/manga/1/32710.jpg);}
 #more818 {background-image: url(http://cdn.myanimelist.net/images/manga/1/54593.jpg);}
 #more635 {background-image: url(http://cdn.myanimelist.net/images/manga/4/32416.jpg);}
@@ -268,7 +268,7 @@ Manga Tumbnail
 #more54 {background-image: url(http://cdn.myanimelist.net/images/manga/5/86211.jpg);}
 #more332 {background-image: url(http://cdn.myanimelist.net/images/manga/3/11475.jpg);}
 #more118 {background-image: url(http://cdn.myanimelist.net/images/manga/2/18592.jpg);}
-#more1709 {background-image: url(http://cdn.myanimelist.net/images/manga/5/24153.jpg);}
+#more1709 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/154448.jpg);}
 #more128 {background-image: url(http://cdn.myanimelist.net/images/manga/3/36997.jpg);}
 #more157 {background-image: url(http://cdn.myanimelist.net/images/manga/3/82696.jpg);}
 #more26584 {background-image: url(http://cdn.myanimelist.net/images/manga/1/42855.jpg);}
@@ -284,7 +284,7 @@ Manga Tumbnail
 #more1745 {background-image: url(http://cdn.myanimelist.net/images/manga/3/50423.jpg);}
 #more909 {background-image: url(http://cdn.myanimelist.net/images/manga/2/88711.jpg);}
 #more1268 {background-image: url(http://cdn.myanimelist.net/images/manga/2/15078.jpg);}
-#more35573 {background-image: url(http://cdn.myanimelist.net/images/manga/3/78169.jpg);}
+#more35573 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/153742.jpg);}
 #more119 {background-image: url(http://cdn.myanimelist.net/images/manga/4/595.jpg);}
 #more1110 {background-image: url(http://cdn.myanimelist.net/images/manga/2/749.jpg);}
 #more627 {background-image: url(http://cdn.myanimelist.net/images/manga/1/20051.jpg);}
@@ -297,7 +297,7 @@ Manga Tumbnail
 #more615 {background-image: url(http://cdn.myanimelist.net/images/manga/2/60629.jpg);}
 #more83 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6322.jpg);}
 #more91 {background-image: url(http://cdn.myanimelist.net/images/manga/5/14253.jpg);}
-#more731 {background-image: url(http://cdn.myanimelist.net/images/manga/2/63117.jpg);}
+#more731 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/63117.jpg);}
 #more766 {background-image: url(http://cdn.myanimelist.net/images/manga/3/5241.jpg);}
 #more606 {background-image: url(http://cdn.myanimelist.net/images/manga/1/20745.jpg);}
 #more3520 {background-image: url(http://cdn.myanimelist.net/images/manga/5/30115.jpg);}
@@ -311,7 +311,7 @@ Manga Tumbnail
 #more39883 {background-image: url(http://cdn.myanimelist.net/images/manga/2/90819.jpg);}
 #more1528 {background-image: url(http://cdn.myanimelist.net/images/manga/5/27730.jpg);}
 #more18 {background-image: url(http://cdn.myanimelist.net/images/manga/2/23163.jpg);}
-#more3285 {background-image: url(http://cdn.myanimelist.net/images/manga/4/71665.jpg);}
+#more3285 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/4/71665.jpg);}
 #more1133 {background-image: url(http://cdn.myanimelist.net/images/manga/4/95345.jpg);}
 #more587 {background-image: url(http://cdn.myanimelist.net/images/manga/2/55723.jpg);}
 #more3299 {background-image: url(http://cdn.myanimelist.net/images/manga/1/52813.jpg);}
@@ -334,7 +334,7 @@ Manga Tumbnail
 #more4293 {background-image: url(http://cdn.myanimelist.net/images/manga/1/9984.jpg);}
 #more1908 {background-image: url(http://cdn.myanimelist.net/images/manga/3/55915.jpg);}
 #more11514 {background-image: url(http://cdn.myanimelist.net/images/manga/4/86839.jpg);}
-#more936 {background-image: url(http://cdn.myanimelist.net/images/manga/2/63001.jpg);}
+#more936 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/15394.jpg);}
 #more165 {background-image: url(http://cdn.myanimelist.net/images/manga/2/5140.jpg);}
 #more19087 {background-image: url(http://cdn.myanimelist.net/images/manga/2/52347.jpg);}
 #more373 {background-image: url(http://cdn.myanimelist.net/images/manga/3/41577.jpg);}
@@ -544,7 +544,7 @@ Manga Tumbnail
 #more888 {background-image: url(http://cdn.myanimelist.net/images/manga/3/1564.jpg);}
 #more1340 {background-image: url(http://cdn.myanimelist.net/images/manga/1/25643.jpg);}
 #more801 {background-image: url(http://cdn.myanimelist.net/images/manga/1/31098.jpg);}
-#more481 {background-image: url(http://cdn.myanimelist.net/images/manga/3/89847.jpg);}
+#more481 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/170572.jpg);}
 #more595 {background-image: url(http://cdn.myanimelist.net/images/manga/1/59063.jpg);}
 #more14065 {background-image: url(http://cdn.myanimelist.net/images/manga/3/20001.jpg);}
 #more881 {background-image: url(http://cdn.myanimelist.net/images/manga/3/264.jpg);}
@@ -745,7 +745,7 @@ Manga Tumbnail
 #more7274 {background-image: url(http://cdn.myanimelist.net/images/manga/3/23928.jpg);}
 #more110 {background-image: url(http://cdn.myanimelist.net/images/manga/3/54753.jpg);}
 #more445 {background-image: url(http://cdn.myanimelist.net/images/manga/3/24974.jpg);}
-#more7375 {background-image: url(http://cdn.myanimelist.net/images/manga/5/96223.jpg);}
+#more7375 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/5/96223.jpg);}
 #more13381 {background-image: url(http://cdn.myanimelist.net/images/manga/4/28896.jpg);}
 #more455 {background-image: url(http://cdn.myanimelist.net/images/manga/5/26926.jpg);}
 #more13837 {background-image: url(http://cdn.myanimelist.net/images/manga/3/20084.jpg);}
@@ -811,7 +811,7 @@ Manga Tumbnail
 #more544 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/89003.jpg);}
 #more2893 {background-image: url(http://cdn.myanimelist.net/images/manga/2/14597.jpg);}
 #more912 {background-image: url(http://cdn.myanimelist.net/images/manga/3/296.jpg);}
-#more375 {background-image: url(http://cdn.myanimelist.net/images/manga/5/737.jpg);}
+#more375 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/5/737.jpg);}
 #more688 {background-image: url(http://cdn.myanimelist.net/images/manga/4/32092.jpg);}
 #more28184 {background-image: url(http://cdn.myanimelist.net/images/manga/1/67427.jpg);}
 #more13667 {background-image: url(http://cdn.myanimelist.net/images/manga/2/52505.jpg);}
@@ -842,7 +842,7 @@ Manga Tumbnail
 #more19094 {background-image: url(http://cdn.myanimelist.net/images/manga/5/40860.jpg);}
 #more1848 {background-image: url(http://cdn.myanimelist.net/images/manga/5/1995.jpg);}
 #more14498 {background-image: url(http://cdn.myanimelist.net/images/manga/2/30052.jpg);}
-#more1097 {background-image: url(http://cdn.myanimelist.net/images/manga/2/724.jpg);}
+#more1097 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/9792.jpg);}
 #more12450 {background-image: url(http://cdn.myanimelist.net/images/manga/2/52295.jpg);}
 #more1604 {background-image: url(http://cdn.myanimelist.net/images/manga/3/28956.jpg);}
 #more1397 {background-image: url(http://cdn.myanimelist.net/images/manga/5/33113.jpg);}
@@ -898,7 +898,7 @@ Manga Tumbnail
 #more6390 {background-image: url(http://cdn.myanimelist.net/images/manga/3/29771.jpg);}
 #more4590 {background-image: url(http://cdn.myanimelist.net/images/manga/5/22017.jpg);}
 #more372 {background-image: url(http://cdn.myanimelist.net/images/manga/2/31753.jpg);}
-#more20242 {background-image: url(http://cdn.myanimelist.net/images/manga/5/81306.jpg);}
+#more20242 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/5/81306.jpg);}
 #more1224 {background-image: url(http://cdn.myanimelist.net/images/manga/1/52281.jpg);}
 #more452 {background-image: url(http://cdn.myanimelist.net/images/manga/3/4963.jpg);}
 #more9732 {background-image: url(http://cdn.myanimelist.net/images/manga/1/51465.jpg);}
@@ -1325,7 +1325,7 @@ Manga Tumbnail
 #more10504 {background-image: url(http://cdn.myanimelist.net/images/manga/1/40968.jpg);}
 #more3126 {background-image: url(http://cdn.myanimelist.net/images/manga/4/25808.jpg);}
 #more553 {background-image: url(http://cdn.myanimelist.net/images/manga/5/735.jpg);}
-#more5651 {background-image: url(http://cdn.myanimelist.net/images/manga/3/77965.jpg);}
+#more5651 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/77965.jpg);}
 #more9114 {background-image: url(http://cdn.myanimelist.net/images/manga/3/12458.jpg);}
 #more1013 {background-image: url(http://cdn.myanimelist.net/images/manga/5/84777.jpg);}
 #more3093 {background-image: url(http://cdn.myanimelist.net/images/manga/3/27872.jpg);}
@@ -2312,7 +2312,7 @@ Manga Tumbnail
 #more2150 {background-image: url(http://cdn.myanimelist.net/images/manga/2/2347.jpg);}
 #more27019 {background-image: url(http://cdn.myanimelist.net/images/manga/2/43515.jpg);}
 #more2977 {background-image: url(http://cdn.myanimelist.net/images/manga/2/67463.jpg);}
-#more17374 {background-image: url(http://cdn.myanimelist.net/images/manga/2/26255.jpg);}
+#more17374 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/26255.jpg);}
 #more4327 {background-image: url(http://cdn.myanimelist.net/images/manga/2/5068.jpg);}
 #more1809 {background-image: url(http://cdn.myanimelist.net/images/manga/2/1945.jpg);}
 #more21600 {background-image: url(http://cdn.myanimelist.net/images/manga/3/70733.jpg);}
@@ -2399,7 +2399,7 @@ Manga Tumbnail
 #more2967 {background-image: url(http://cdn.myanimelist.net/images/manga/2/16767.jpg);}
 #more5075 {background-image: url(http://cdn.myanimelist.net/images/manga/1/10006.jpg);}
 #more163 {background-image: url(http://cdn.myanimelist.net/images/manga/1/1288.jpg);}
-#more7630 {background-image: url(http://cdn.myanimelist.net/images/manga/2/21562.jpg);}
+#more7630 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/138477.jpg);}
 #more26133 {background-image: url(http://cdn.myanimelist.net/images/manga/3/49045.jpg);}
 #more2448 {background-image: url(http://cdn.myanimelist.net/images/manga/1/30584.jpg);}
 #more8743 {background-image: url(http://cdn.myanimelist.net/images/manga/2/49499.jpg);}
@@ -3047,7 +3047,7 @@ Manga Tumbnail
 #more6857 {background-image: url(http://cdn.myanimelist.net/images/manga/2/9215.jpg);}
 #more16148 {background-image: url(http://cdn.myanimelist.net/images/manga/3/26876.jpg);}
 #more4683 {background-image: url(http://cdn.myanimelist.net/images/manga/2/5777.jpg);}
-#more54897 {background-image: url(http://cdn.myanimelist.net/images/manga/1/95567.jpg);}
+#more54897 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/95567.jpg);}
 #more2363 {background-image: url(http://cdn.myanimelist.net/images/manga/1/2556.jpg);}
 #more37489 {background-image: url(http://cdn.myanimelist.net/images/manga/3/67409.jpg);}
 #more16795 {background-image: url(http://cdn.myanimelist.net/images/manga/1/74235.jpg);}
@@ -8580,7 +8580,7 @@ Manga Tumbnail
 #more3270 {background-image: url(http://cdn.myanimelist.net/images/manga/2/3590.jpg);}
 #more29401 {background-image: url(http://cdn.myanimelist.net/images/manga/3/50067.jpg);}
 #more7670 {background-image: url(http://cdn.myanimelist.net/images/manga/2/79437.jpg);}
-#more51453 {background-image: url(http://cdn.myanimelist.net/images/manga/3/97307.jpg);}
+#more51453 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/97307.jpg);}
 #more28931 {background-image: url(http://cdn.myanimelist.net/images/manga/3/71743.jpg);}
 #more2565 {background-image: url(http://cdn.myanimelist.net/images/manga/1/3337.jpg);}
 #more17677 {background-image: url(http://cdn.myanimelist.net/images/manga/3/26827.jpg);}
@@ -15701,7 +15701,7 @@ Manga Tumbnail
 #more21912 {background-image: url(http://cdn.myanimelist.net/images/manga/3/35573.jpg);}
 #more48793 {background-image: url(http://cdn.myanimelist.net/images/manga/2/85871.jpg);}
 #more20381 {background-image: url(http://cdn.myanimelist.net/images/manga/3/32221.jpg);}
-#more48285 {background-image: url(http://cdn.myanimelist.net/images/manga/2/85141.jpg);}
+#more48285 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/85141.jpg);}
 #more14240 {background-image: url(http://cdn.myanimelist.net/images/manga/2/20296.jpg);}
 #more13477 {background-image: url(http://cdn.myanimelist.net/images/manga/2/18940.jpg);}
 #more5545 {background-image: url(http://cdn.myanimelist.net/images/manga/2/7085.jpg);}
