--- a/Manga.css
+++ b/Manga.css
@@ -22,7 +22,7 @@ Manga Tumbnail
 #more2921 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6309.jpg);}
 #more584 {background-image: url(http://cdn.myanimelist.net/images/manga/5/16174.jpg);}
 #more3986 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/186275.jpg);}
-#more9 {background-image: url(http://cdn.myanimelist.net/images/manga/5/973.jpg);}
+#more9 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/27076.jpg);}
 #more3031 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/80893.jpg);}
 #more13492 {background-image: url(http://cdn.myanimelist.net/images/manga/3/39738.jpg);}
 #more23390 {background-image: url(http://cdn.myanimelist.net/images/manga/1/95517.jpg);}
@@ -36,12 +36,12 @@ Manga Tumbnail
 #more104 {background-image: url(http://cdn.myanimelist.net/images/manga/4/90029.jpg);}
 #more7519 {background-image: url(http://cdn.myanimelist.net/images/manga/3/53403.jpg);}
 #more933 {background-image: url(http://cdn.myanimelist.net/images/manga/2/313.jpg);}
-#more894 {background-image: url(http://cdn.myanimelist.net/images/manga/3/54787.jpg);}
+#more894 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/54787.jpg);}
 #more22 {background-image: url(http://cdn.myanimelist.net/images/manga/2/24135.jpg);}
-#more15 {background-image: url(http://cdn.myanimelist.net/images/manga/1/51855.jpg);}
+#more15 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/51855.jpg);}
 #more267 {background-image: url(http://cdn.myanimelist.net/images/manga/2/149.jpg);}
 #more16 {background-image: url(http://cdn.myanimelist.net/images/manga/2/52139.jpg);}
-#more42 {background-image: url(http://cdn.myanimelist.net/images/manga/3/54547.jpg);}
+#more42 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/54545.jpg);}
 #more3633 {background-image: url(http://cdn.myanimelist.net/images/manga/3/29745.jpg);}
 #more8586 {background-image: url(http://cdn.myanimelist.net/images/manga/2/55867.jpg);}
 #more591 {background-image: url(http://cdn.myanimelist.net/images/manga/2/13176.jpg);}
@@ -60,11 +60,11 @@ Manga Tumbnail
 #more988 {background-image: url(http://cdn.myanimelist.net/images/manga/3/25585.jpg);}
 #more50 {background-image: url(http://cdn.myanimelist.net/images/manga/1/57607.jpg);}
 #more13463 {background-image: url(http://cdn.myanimelist.net/images/manga/1/26788.jpg);}
-#more106 {background-image: url(http://cdn.myanimelist.net/images/manga/2/6415.jpg);}
+#more106 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/173442.jpg);}
 #more8483 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/115221.jpg);}
 #more11767 {background-image: url(http://cdn.myanimelist.net/images/manga/4/68191.jpg);}
 #more671 {background-image: url(http://cdn.myanimelist.net/images/manga/3/63339.jpg);}
-#more3403 {background-image: url(http://cdn.myanimelist.net/images/manga/2/54789.jpg);}
+#more3403 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/54789.jpg);}
 #more40 {background-image: url(http://cdn.myanimelist.net/images/manga/1/57157.jpg);}
 #more1 {background-image: url(http://cdn.myanimelist.net/images/manga/3/54525.jpg);}
 #more656 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/126197.webp);}
@@ -91,7 +91,7 @@ Manga Tumbnail
 #more18597 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/137971.webp);}
 #more463 {background-image: url(http://cdn.myanimelist.net/images/manga/5/673.jpg);}
 #more1102 {background-image: url(http://cdn.myanimelist.net/images/manga/3/55641.jpg);}
-#more23 {background-image: url(http://cdn.myanimelist.net/images/manga/1/5616.jpg);}
+#more23 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/197485.jpg);}
 #more90 {background-image: url(http://cdn.myanimelist.net/images/manga/5/14745.jpg);}
 #more13949 {background-image: url(http://cdn.myanimelist.net/images/manga/3/27687.jpg);}
 #more3872 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/5/111965.jpg);}
@@ -161,7 +161,7 @@ Manga Tumbnail
 #more24294 {background-image: url(http://cdn.myanimelist.net/images/manga/1/62369.jpg);}
 #more1121 {background-image: url(http://cdn.myanimelist.net/images/manga/3/51641.jpg);}
 #more7749 {background-image: url(http://cdn.myanimelist.net/images/manga/2/37557.jpg);}
-#more5627 {background-image: url(http://cdn.myanimelist.net/images/manga/2/57141.jpg);}
+#more5627 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/57141.jpg);}
 #more73 {background-image: url(http://cdn.myanimelist.net/images/manga/3/57219.jpg);}
 #more7458 {background-image: url(http://cdn.myanimelist.net/images/manga/5/34287.jpg);}
 #more658 {background-image: url(http://cdn.myanimelist.net/images/manga/2/56791.jpg);}
@@ -267,7 +267,7 @@ Manga Tumbnail
 #more928 {background-image: url(http://cdn.myanimelist.net/images/manga/3/62279.jpg);}
 #more54 {background-image: url(http://cdn.myanimelist.net/images/manga/5/86211.jpg);}
 #more332 {background-image: url(http://cdn.myanimelist.net/images/manga/3/11475.jpg);}
-#more118 {background-image: url(http://cdn.myanimelist.net/images/manga/2/18592.jpg);}
+#more118 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/154345.jpg);}
 #more1709 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/154448.jpg);}
 #more128 {background-image: url(http://cdn.myanimelist.net/images/manga/3/36997.jpg);}
 #more157 {background-image: url(http://cdn.myanimelist.net/images/manga/3/82696.jpg);}
@@ -307,7 +307,7 @@ Manga Tumbnail
 #more1016 {background-image: url(http://cdn.myanimelist.net/images/manga/2/31140.jpg);}
 #more1543 {background-image: url(http://cdn.myanimelist.net/images/manga/2/28302.jpg);}
 #more2149 {background-image: url(http://cdn.myanimelist.net/images/manga/3/17305.jpg);}
-#more4608 {background-image: url(http://cdn.myanimelist.net/images/manga/5/27197.jpg);}
+#more4608 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/160213.jpg);}
 #more39883 {background-image: url(http://cdn.myanimelist.net/images/manga/2/90819.jpg);}
 #more1528 {background-image: url(http://cdn.myanimelist.net/images/manga/5/27730.jpg);}
 #more18 {background-image: url(http://cdn.myanimelist.net/images/manga/2/23163.jpg);}
@@ -318,14 +318,14 @@ Manga Tumbnail
 #more16688 {background-image: url(http://cdn.myanimelist.net/images/manga/3/38312.jpg);}
 #more8840 {background-image: url(http://cdn.myanimelist.net/images/manga/2/20983.jpg);}
 #more1257 {background-image: url(http://cdn.myanimelist.net/images/manga/1/34254.jpg);}
-#more582 {background-image: url(http://cdn.myanimelist.net/images/manga/1/62557.jpg);}
+#more582 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/62559.jpg);}
 #more7776 {background-image: url(http://cdn.myanimelist.net/images/manga/1/77549.jpg);}
 #more24457 {background-image: url(http://cdn.myanimelist.net/images/manga/2/39601.jpg);}
 #more12554 {background-image: url(http://cdn.myanimelist.net/images/manga/3/60273.jpg);}
 #more509 {background-image: url(http://cdn.myanimelist.net/images/manga/2/1111.jpg);}
 #more23661 {background-image: url(http://cdn.myanimelist.net/images/manga/2/39818.jpg);}
 #more1291 {background-image: url(http://cdn.myanimelist.net/images/manga/3/59521.jpg);}
-#more12629 {background-image: url(http://cdn.myanimelist.net/images/manga/1/50777.jpg);}
+#more12629 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/50775.jpg);}
 #more8042 {background-image: url(http://cdn.myanimelist.net/images/manga/4/25782.jpg);}
 #more789 {background-image: url(http://cdn.myanimelist.net/images/manga/1/5190.jpg);}
 #more1814 {background-image: url(http://cdn.myanimelist.net/images/manga/1/33334.jpg);}
@@ -570,7 +570,7 @@ Manga Tumbnail
 #more3329 {background-image: url(http://cdn.myanimelist.net/images/manga/1/6272.jpg);}
 #more1267 {background-image: url(http://cdn.myanimelist.net/images/manga/1/4018.jpg);}
 #more689 {background-image: url(http://cdn.myanimelist.net/images/manga/2/92.jpg);}
-#more4077 {background-image: url(http://cdn.myanimelist.net/images/manga/3/49989.jpg);}
+#more4077 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/157775.jpg);}
 #more425 {background-image: url(http://cdn.myanimelist.net/images/manga/3/3362.jpg);}
 #more11716 {background-image: url(http://cdn.myanimelist.net/images/manga/4/61633.jpg);}
 #more17465 {background-image: url(http://cdn.myanimelist.net/images/manga/2/56581.jpg);}
@@ -648,7 +648,7 @@ Manga Tumbnail
 #more420 {background-image: url(http://cdn.myanimelist.net/images/manga/3/637.jpg);}
 #more11646 {background-image: url(http://cdn.myanimelist.net/images/manga/3/15767.jpg);}
 #more726 {background-image: url(http://cdn.myanimelist.net/images/manga/5/42881.jpg);}
-#more10837 {background-image: url(http://cdn.myanimelist.net/images/manga/2/51873.jpg);}
+#more10837 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/51873.jpg);}
 #more3884 {background-image: url(http://cdn.myanimelist.net/images/manga/1/52937.jpg);}
 #more1432 {background-image: url(http://cdn.myanimelist.net/images/manga/3/1372.jpg);}
 #more6164 {background-image: url(http://cdn.myanimelist.net/images/manga/4/82458.jpg);}
@@ -686,7 +686,7 @@ Manga Tumbnail
 #more37013 {background-image: url(http://cdn.myanimelist.net/images/manga/4/76901.jpg);}
 #more772 {background-image: url(http://cdn.myanimelist.net/images/manga/2/21736.jpg);}
 #more17706 {background-image: url(http://cdn.myanimelist.net/images/manga/3/59519.jpg);}
-#more2598 {background-image: url(http://cdn.myanimelist.net/images/manga/3/6142.jpg);}
+#more2598 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/6142.jpg);}
 #more1673 {background-image: url(http://cdn.myanimelist.net/images/manga/1/55707.jpg);}
 #more1113 {background-image: url(http://cdn.myanimelist.net/images/manga/2/17076.jpg);}
 #more634 {background-image: url(http://cdn.myanimelist.net/images/manga/1/9923.jpg);}
@@ -758,7 +758,7 @@ Manga Tumbnail
 #more3941 {background-image: url(http://cdn.myanimelist.net/images/manga/1/6141.jpg);}
 #more18320 {background-image: url(http://cdn.myanimelist.net/images/manga/1/39735.jpg);}
 #more17518 {background-image: url(http://cdn.myanimelist.net/images/manga/2/27570.jpg);}
-#more779 {background-image: url(http://cdn.myanimelist.net/images/manga/3/4758.jpg);}
+#more779 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/4758.jpg);}
 #more562 {background-image: url(http://cdn.myanimelist.net/images/manga/4/33691.jpg);}
 #more628 {background-image: url(http://cdn.myanimelist.net/images/manga/2/4429.jpg);}
 #more3713 {background-image: url(http://cdn.myanimelist.net/images/manga/5/5866.jpg);}
@@ -1065,7 +1065,7 @@ Manga Tumbnail
 #more21151 {background-image: url(http://cdn.myanimelist.net/images/manga/3/51845.jpg);}
 #more4510 {background-image: url(http://cdn.myanimelist.net/images/manga/4/6831.jpg);}
 #more922 {background-image: url(http://cdn.myanimelist.net/images/manga/3/76283.jpg);}
-#more1147 {background-image: url(http://cdn.myanimelist.net/images/manga/3/826.jpg);}
+#more1147 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/826.jpg);}
 #more371 {background-image: url(http://cdn.myanimelist.net/images/manga/4/27255.jpg);}
 #more21111 {background-image: url(http://cdn.myanimelist.net/images/manga/3/33882.jpg);}
 #more4195 {background-image: url(http://cdn.myanimelist.net/images/manga/2/21608.jpg);}
@@ -1151,7 +1151,7 @@ Manga Tumbnail
 #more13544 {background-image: url(http://cdn.myanimelist.net/images/manga/3/52657.jpg);}
 #more989 {background-image: url(http://cdn.myanimelist.net/images/manga/2/5469.jpg);}
 #more37563 {background-image: url(http://cdn.myanimelist.net/images/manga/5/67537.jpg);}
-#more23868 {background-image: url(http://cdn.myanimelist.net/images/manga/1/38607.jpg);}
+#more23868 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/57473.jpg);}
 #more14779 {background-image: url(http://cdn.myanimelist.net/images/manga/2/67525.jpg);}
 #more6812 {background-image: url(http://cdn.myanimelist.net/images/manga/3/32264.jpg);}
 #more10875 {background-image: url(http://cdn.myanimelist.net/images/manga/2/14643.jpg);}
@@ -1329,7 +1329,7 @@ Manga Tumbnail
 #more9114 {background-image: url(http://cdn.myanimelist.net/images/manga/3/12458.jpg);}
 #more1013 {background-image: url(http://cdn.myanimelist.net/images/manga/5/84777.jpg);}
 #more3093 {background-image: url(http://cdn.myanimelist.net/images/manga/3/27872.jpg);}
-#more910 {background-image: url(http://cdn.myanimelist.net/images/manga/5/35538.jpg);}
+#more910 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/2/177315.jpg);}
 #more730 {background-image: url(http://cdn.myanimelist.net/images/manga/2/56901.jpg);}
 #more13102 {background-image: url(http://cdn.myanimelist.net/images/manga/3/48367.jpg);}
 #more579 {background-image: url(http://cdn.myanimelist.net/images/manga/4/63071.jpg);}
@@ -1968,7 +1968,7 @@ Manga Tumbnail
 #more288 {background-image: url(http://cdn.myanimelist.net/images/manga/3/11338.jpg);}
 #more10688 {background-image: url(http://cdn.myanimelist.net/images/manga/1/14371.jpg);}
 #more11502 {background-image: url(http://cdn.myanimelist.net/images/manga/1/82050.jpg);}
-#more8427 {background-image: url(http://cdn.myanimelist.net/images/manga/4/34524.jpg);}
+#more8427 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/125135.jpg);}
 #more2080 {background-image: url(http://cdn.myanimelist.net/images/manga/3/36329.jpg);}
 #more17666 {background-image: url(http://cdn.myanimelist.net/images/manga/2/26811.jpg);}
 #more16954 {background-image: url(http://cdn.myanimelist.net/images/manga/2/37281.jpg);}
@@ -2771,7 +2771,7 @@ Manga Tumbnail
 #more3283 {background-image: url(http://cdn.myanimelist.net/images/manga/2/28783.jpg);}
 #more15571 {background-image: url(http://cdn.myanimelist.net/images/manga/3/22680.jpg);}
 #more8876 {background-image: url(http://cdn.myanimelist.net/images/manga/2/33365.jpg);}
-#more10706 {background-image: url(http://cdn.myanimelist.net/images/manga/1/50089.jpg);}
+#more10706 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/1/50089.jpg);}
 #more7097 {background-image: url(http://cdn.myanimelist.net/images/manga/2/9514.jpg);}
 #more723 {background-image: url(http://cdn.myanimelist.net/images/manga/3/33357.jpg);}
 #more41535 {background-image: url(http://cdn.myanimelist.net/images/manga/3/72773.jpg);}
