--- a/Anime.css
+++ b/Anime.css
@@ -10766,12 +10766,17 @@ simple rule of add = #more {background-image: url();}
 #more34542 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87467.jpg);}
 #more35639 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/87647.jpg);}
 #more36098 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87224.jpg);}
-#more36027 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/87585.jpg);}
+#more36027 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88190.jpg);}
 #more36432 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/87911.jpg);}
 #more35076 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/87684.jpg);}
 #more36296 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87685.jpg);}
 #more35241 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87241.jpg);}
-#more35484 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/87265.jpg);}
+#more35484 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/88155.jpg);}
 #more36316 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/87724.jpg);}
 #more36474 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/88111.jpg);}
 #more36475 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/88110.jpg);}
+#more36407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/87855.jpg);}
+#more36511 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/88169.jpg);}
+#more35376 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/88215.jpg);}
+#more35788 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86603.jpg);}
+#more {background-image: url();}
