--- a/Anime.css
+++ b/Anime.css
@@ -10764,7 +10764,7 @@ simple rule of add = #more {background-image: url();}
 #more34572 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/86072.jpg);}
 #more36144 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/87620.jpg);}
 #more34542 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/87467.jpg);}
-#more35639 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/87647.jpg);}
+#more35639 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/88234.jpg);}
 #more36098 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87224.jpg);}
 #more36027 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88190.jpg);}
 #more36432 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/87911.jpg);}
@@ -10779,4 +10779,9 @@ simple rule of add = #more {background-image: url();}
 #more36511 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/88169.jpg);}
 #more35376 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/88215.jpg);}
 #more35788 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/86603.jpg);}
+#more36525 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/88284.jpg);}
+#more36220 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88425.jpg);}
+#more34438 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/87709.jpg);}
+#more34439 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87904.jpg);}
+#more {background-image: url();}
 #more {background-image: url();}
