--- a/Anime.css
+++ b/Anime.css
@@ -10785,3 +10785,10 @@ simple rule of add = #more {background-image: url();}
 #more34439 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/87904.jpg);}
 #more36563 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/88376.jpg);}
 #more34281 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/88545.jpg);}
+#more35000 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/87158.jpg);}
+#more36633 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/88526.jpg);}
+#more36548 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/88330.jpg);}
+#more36688 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/88680.jpg);}
+#more36397 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/88806.jpg);}
+
+
